##############

Compatibility Breaks
********************

* ``bzr ls`` is no longer recursive by default. To recurse, use the
  new ``-R`` option. The old ``--non-recursive`` option has been removed.
  If you alias ``ls`` to ``ls -R``, you can disable recursion using
  ``--no-recursive`` instead.  (Ian Clatworthy)

New Features
************

Improvements
************

Bug Fixes
*********

Documentation
*************

API Changes
***********

Testing
*******

Internals
*********


bzr 1.14rc1
###########
:Codename: brisbane-core
:1.14rc1: 2009-04-06

New formats 1.14 and 1.14-rich-root supporting End-Of-Line (EOL) conversions,
keyword templating (via the bzr-keywords plugin) and generic content filtering.
End-of-line conversion is now supported for formats supporting content
filtering.

Compatibility Breaks
********************

* A previously disabled code path to accelerate getting configuration
  settings from a smart server has been reinstated. We think this *may*
  cause a incompatibility with servers older than bzr 0.15. We intend
  to issue a point release to address this if it turns out to be a
  problem. (Robert Collins, Andrew Bennetts)

* bzr no longer autodetects nested trees as 'tree-references'.  They
  must now be explicitly added tree references.  At the commandline, use
  join --reference instead of add.  (Aaron Bentley)

* The ``--long`` log format (the default) no longer shows merged
  revisions implicitly, making it consistent with the ``short`` and
  ``line`` log formats.  To see merged revisions for just a given
  revision, use ``bzr log -n0 -rX``. To see every merged revision,
  use ``bzr log -n0``.  (Ian Clatworthy)

New Features
************

* New formats ``1.14`` and ``1.14-rich-root`` supporting End-Of-Line
  (EOL) conversions, keyword templating (via the bzr-keywords plugin)
  and generic content filtering. These formats replace the experimental
  ``development-wt5`` and ``development-wt5-rich-root`` formats