@@ -26,6 +26,9 @@ Improvements
 Bug Fixes
 *********
 
+* Non-recursive ``bzr ls`` now works properly when a path is specified.
+  (Jelmer Vernooij, #357863)
+
 Documentation
 *************
 
